@@ -16,7 +16,7 @@
  *  along with this program; if not, write to the Free Software
  *  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
-/* $Id: format.c,v 1.3 2004/02/23 11:58:27 ekohl Exp $
+/* $Id: format.c,v 1.4 2004/08/15 22:29:50 chorns Exp $
  * COPYRIGHT:       See COPYING in the top level directory
  * PROJECT:         ReactOS text-mode setup
  * FILE:            subsys/system/usetup/format.c
@@ -26,7 +26,7 @@
 
 /* INCLUDES *****************************************************************/
 
-#include <ddk/ntddk.h>
+#include "precomp.h"
 #include <ntdll/rtl.h>
 #include <fslib/vfatlib.h>
 
