@@ -16,7 +16,7 @@
  *  along with this program; if not, write to the Free Software
  *  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
-/* $Id: partlist.c,v 1.26 2003/12/01 18:28:54 navaraf Exp $
+/* $Id: partlist.c,v 1.27 2004/08/15 22:29:50 chorns Exp $
  * COPYRIGHT:       See COPYING in the top level directory
  * PROJECT:         ReactOS text-mode setup
  * FILE:            subsys/system/usetup/partlist.c
@@ -25,7 +25,7 @@
  *                  Casper S. Hornstrup (chorns@users.sourceforge.net)
  */
 
-#include <ddk/ntddk.h>
+#include "precomp.h"
 #include <ddk/ntddscsi.h>
 
 #include <ntdll/rtl.h>
